[TASK] Changed PHPUnit file to dist and updated symfony di container version to 2.3

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "wizkunde/php-sso",
     "minimum-stability":"dev",
     "require": {
-        "symfony/dependency-injection": "2.4.*@dev",
+        "symfony/dependency-injection": "~2.3",
         "fr3d/xmlseclibs": "dev-hotfix/validation-references"
     },
     "require-dev": {
