--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
             depends="prepare,phpunit, phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpcb"/>
 
     <target name="build-parallel"
-            depends="prepare,lint,tools-parallel,phpunit,phpcb"/>
+            depends="prepare,tools-parallel,phpunit,phpcb"/>
 
     <target name="tools-parallel" description="Run tools in parallel">
         <parallel threadCount="2">
