[FEATURE] Initial version of the Post binding, working on a complete script. these scripts are temporary and will be removed soon

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "minimum-stability":"dev",
     "require": {
         "symfony/dependency-injection": "~2.3",
-        "fr3d/xmlseclibs": "dev-hotfix/validation-references"
+        "fr3d/xmlseclibs": "dev-hotfix/validation-references",
+        "guzzle/guzzle": "3.9.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
