--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "symfony/dependency-injection": "~2.3",
         "fr3d/xmlseclibs": "dev-hotfix/validation-references",
-        "guzzle/guzzle": "3.9.*@dev"
+        "guzzlehttp/guzzle": "5.0.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
