--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "symfony/dependency-injection": "~2.3",
         "xmlseclibs/xmlseclibs": "dev-master",
-        "guzzlehttp/guzzle": "5.0.*@dev"
+        "guzzlehttp/guzzle": "5.0.*@dev",
+        "twig/twig": "1.16.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
