--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Wizkunde\\SAML2PHP": "src/"
+            "Wizkunde\\SAMLBase": "src/"
         }
     }
 }
