--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wizkunde/saml2php",
+    "name": "wizkunde/samlbase",
     "minimum-stability":"dev",
     "require": {
         "symfony/dependency-injection": "~2.3",
