--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "require": {
         "symfony/dependency-injection": "~2.3",
         "xmlseclibs/xmlseclibs": "dev-master",
-        "guzzlehttp/guzzle": "5.0.*@dev",
+        "guzzle/guzzle": "3.9.*@dev",
         "twig/twig": "1.16.*@dev"
     },
     "require-dev": {
