--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     ],
     "require": {
         "symfony/dependency-injection": "~2.3",
-        "xmlseclibs/xmlseclibs": "dev-master@dev",
         "guzzle/guzzle": "3.9.*@dev",
         "twig/twig": "1.22.*@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "xmlseclibs/xmlseclibs": "dev-master@dev",
     },
     "autoload": {
         "psr-0": {
