--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "xmlseclibs/xmlseclibs": "dev-master@dev",
+        "xmlseclibs/xmlseclibs": "dev-master@dev"
     },
     "autoload": {
         "psr-0": {
