--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
     "require": {
         "symfony/dependency-injection": "~2.3",
         "guzzle/guzzle": "3.9.*@dev",
-        "twig/twig": "1.22.*@dev"
+        "twig/twig": "1.22.*@dev",
+        "xmlseclibs/xmlseclibs": "dev-master"    
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "xmlseclibs/xmlseclibs": "dev-master@dev"
+        "phpunit/phpunit": "3.7.*"
+        
     },
     "autoload": {
         "psr-0": {
