--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/dependency-injection": "~2.3",
         "guzzle/guzzle": "3.9.*@dev",
         "twig/twig": "1.22.*@dev",
-        "xmlseclibs/xmlseclibs": "dev-master"    
+        "xmlseclibs/xmlseclibs": "dev-master@dev"    
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
