--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,14 @@
         "symfony/dependency-injection": "~2.3",
         "guzzle/guzzle": "3.9.*@dev",
         "twig/twig": "1.22.*@dev",
-        "xmlseclibs/xmlseclibs": "dev-master@stable"    
+        "xmlseclibs/xmlseclibs": "1.0"    
     },
+    "repositories": [ 
+        {
+            "type": "vcs",
+            "url": "https://github.com/esseremmerik/xmlseclibs"
+        }
+    ],
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
         
